[package]
name = "embedded-graphics-fbdev"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
framebuffer = "0.3.1"
rgb = "0.8.37"
rgb565 = { version = "0.1.3", features = ["std"] }
embedded-graphics-core = { version = "0.4.0", optional = true }

[features]
embeded-graphics = ["dep:embedded-graphics-core"]